4.33 2016-09-16

    [ DOCUMENTATION ]
    - clarify that ->param will return the first value if there are
      multiple values (when not called in list context)

4.32 2016-07-19

    [ DOCUMENTATION ]
    - make perldoc CGI object consistent (GH #205)
    - clarify reason for absolute URLs (GH #206)

    [ INTERNALS ]
    - tweak dependency defs in Makefile.PL (GH #207, GH #208)
    - (thanks to karenetheridge and kentfredric)

4.31 2016-06-14

    [ FEATURES ]
    - Add SameSite support to Cookie handling (thanks to pangyre)

    [ INTERNALS ]
    - The MultipartBuffer package has been renamed to CGI::MultipartBuffer.
      This has been done in a way to ensure any $MultipartBuffer package
      variables are still set correctly in CGI::MultipartBuffer. if you are
      explicitly using MultipartBuffer in a form such as:

        MultipartBuffer->new

      your code will break. you should be calling:

        CGI->new->new_MultipartBuffer( $boundary,$length );

      to ensure the correctly package is called. if you are extending the
      MultipartBuffer package though use of ISA or base (or parent) then you
      will need to update your code to use CGI::MultipartBuffer

    - fake using strict and warnings to appease CPANTS Kwalitee

    - require File::Temp v0.17+ to get seekable file handles (GH #204)

4.28 2016-03-14

    [ RELEASE NOTES ]
    - please see v4.21 Changes for any potentially impacting changes

    [ SPEC / BUG FIXES ]
    - undef %QUERY_PARAM in initialize_globals to clean mod_perl env

    [ TESTING ]
    - improve test coverage on request types (GH #199, GH #200)
    - improve test coverage on CGI::Carp

4.27 2016-03-02

    [ RELEASE NOTES ]
    - please see v4.21 Changes for any potentially impacting changes

    [ INTERNALS ]
    - fix a couple of warnings in test harness
    - add taint flag to example file_upload
    - fix a warnings in STORE subroutine

4.26 2016-02-04

    [ RELEASE NOTES ]