@@ -30,6 +30,7 @@ t/cgi.t
 t/changes.t
 t/charset.t
 t/checkbox_group.t
+t/command_line.t
 t/compiles_pod.t
 t/cookie.t
 t/delete.t
