@@ -1339,6 +1339,10 @@ sub version {
 ####
 sub url_param {
     my ($self,@p) = self_or_default(@_);
+    if (not defined $self->request_method) {
+        # Running from command line.
+        return $self->param(@p);
+    }
     my $name = shift(@p);
     return undef unless exists($ENV{QUERY_STRING});
     unless (exists($self->{'.url_param'})) {
